EntityFramework up and running + model classes

--- a/WebDev3.CentiSoft.Web.FrontEnd/WebDev3.CentiSoft.Web.FrontEnd.csproj
+++ b/WebDev3.CentiSoft.Web.FrontEnd/WebDev3.CentiSoft.Web.FrontEnd.csproj
@@ -285,6 +285,12 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WebDev3.CentiSoft.Core\WebDev3.CentiSoft.Core.csproj">
+      <Project>{c0504ccf-fa13-4ab9-a9dc-7bab1e192e76}</Project>
+      <Name>WebDev3.CentiSoft.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
