fixing data for seed

--- a/WebDev3.CentiSoft.Core/WebDev3.CentiSoft.Core.csproj
+++ b/WebDev3.CentiSoft.Core/WebDev3.CentiSoft.Core.csproj
@@ -47,7 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\BaseRepository.cs" />
     <Compile Include="DAL\CentiSoftDbContext.cs" />
+    <Compile Include="DAL\DeveloperRepository.cs" />
     <Compile Include="Migrations\201803020950001_InitialCreate.cs" />
     <Compile Include="Migrations\201803020950001_InitialCreate.Designer.cs">
       <DependentUpon>201803020950001_InitialCreate.cs</DependentUpon>
