updated with unitOfWork pattern

--- a/WebDev3.CentiSoft.Core/WebDev3.CentiSoft.Core.csproj
+++ b/WebDev3.CentiSoft.Core/WebDev3.CentiSoft.Core.csproj
@@ -62,6 +62,7 @@
     <Compile Include="DAL\EFRepository.cs" />
     <Compile Include="DAL\CentiSoftDbContext.cs" />
     <Compile Include="DAL\MemoryRepository.cs" />
+    <Compile Include="DAL\UnitOfWork.cs" />
     <Compile Include="Migrations\201803020950001_InitialCreate.cs" />
     <Compile Include="Migrations\201803020950001_InitialCreate.Designer.cs">
       <DependentUpon>201803020950001_InitialCreate.cs</DependentUpon>
