--- a/WebDev3.CentiSoft.Web.FrontEnd/WebDev3.CentiSoft.Web.FrontEnd.csproj
+++ b/WebDev3.CentiSoft.Web.FrontEnd/WebDev3.CentiSoft.Web.FrontEnd.csproj
@@ -217,6 +217,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\DeveloperController.cs" />
+    <Compile Include="Controllers\DevelopersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="DependencyResolution\ControllerConvention.cs" />
